
INCLUDE_DIRECTORIES(
    ${CUDA_INCLUDE_DIRS}
    ${CUDA_TOOLKIT_ROOT_DIR}
    ${CUDA_SDK_ROOT_DIR}
    #Export header:
    ${CMAKE_CURRENT_BINARY_DIR}
)

SET(SOURCES
    RawCalc.cpp
)

SET(CUDA_SOURCES
    ProgGPU.cu
)

set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode arch=compute_20,code=sm_20)

CUDA_COMPILE(DRIVER_O ${CUDA_SOURCES})


ADD_DEFINITIONS(-DBUILD_LIBRARY)
CUDA_ADD_LIBRARY(${PRJ_NAME} SHARED
    ${SOURCES}
    ${CUDA_SOURCES}
)
INCLUDE(GenerateExportHeader)
GENERATE_EXPORT_HEADER( ${PRJ_NAME}
    BASE_NAME ${PRJ_NAME}
    EXPORT_MACRO_NAME ${PRJ_NAME}_EXPORT
    EXPORT_FILE_NAME ${PRJ_NAME}_Export.h
    STATIC_DEFINE ${PRJ_NAME}_BUILT_AS_STATIC
)

SET_TARGET_PROPERTIES(${PRJ_NAME} PROPERTIES DEFINE_SYMBOL  "COMPILING_DLL")
TARGET_LINK_LIBRARIES(${PRJ_NAME}
    ${CUDA_LIBRARIES}
    ${PLATFORM_SPECIFIC_LIBRARIES}
)

INSTALL(TARGETS ${PRJ_NAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
    LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}
    ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}
)



